<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="8dp"
  tools:context=".MainActivity">

  <Button
    android:id="@+id/image"
    style="@style/mono"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:text="@string/caption_image"
    app:layout_constraintBottom_toTopOf="@id/imageOutput"
    app:layout_constraintEnd_toStartOf="@id/imageSecure"
    app:layout_constraintHorizontal_chainStyle="spread"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="spread" />

  <Button
    android:id="@+id/imageSecure"
    style="@style/mono"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:text="@string/caption_imageSecure"
    app:layout_constraintBottom_toBottomOf="@id/image"
    app:layout_constraintEnd_toStartOf="@id/video"
    app:layout_constraintStart_toEndOf="@+id/image"
    app:layout_constraintTop_toTopOf="@id/image" />

  <Button
    android:id="@+id/video"
    style="@style/mono"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:text="@string/caption_video"
    app:layout_constraintBottom_toBottomOf="@id/image"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/imageSecure"
    app:layout_constraintTop_toTopOf="@id/image" />

  <Button
    android:id="@+id/imageOutput"
    style="@style/mono"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:text="@string/caption_imageOutput"
    app:layout_constraintBottom_toTopOf="@id/scenario"
    app:layout_constraintEnd_toStartOf="@id/imageSecureOutput"
    app:layout_constraintHorizontal_chainStyle="spread"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/image" />

  <Button
    android:id="@+id/imageSecureOutput"
    style="@style/mono"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:text="@string/caption_imageSecureOutput"
    app:layout_constraintBottom_toBottomOf="@id/imageOutput"
    app:layout_constraintEnd_toStartOf="@id/videoOutput"
    app:layout_constraintStart_toEndOf="@+id/imageOutput"
    app:layout_constraintTop_toTopOf="@id/imageOutput" />

  <Button
    android:id="@+id/videoOutput"
    style="@style/mono"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:text="@string/caption_videoOutput"
    app:layout_constraintBottom_toBottomOf="@id/imageOutput"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/imageSecureOutput"
    app:layout_constraintTop_toTopOf="@id/imageOutput" />

  <TextView
    android:id="@+id/scenario"
    style="@style/mono"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@id/result"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintStart_toStartOf="parent"
    tools:text="ACTION_IMAGE_CAPTURE_SECURE" />

  <TextView
    android:id="@+id/result"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    app:layout_constraintBaseline_toBaselineOf="@id/scenario"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/scenario"
    tools:text="No bitmap provided" />
</androidx.constraintlayout.widget.ConstraintLayout>